--- a/code/main.lfm
+++ b/code/main.lfm
@@ -1,9 +1,9 @@
 object SpecEmu: TSpecEmu
-  Left = 218
+  Left = 331
   Height = 659
-  Top = 253
+  Top = 198
   Width = 1177
-  Caption = 'Alvatrum Beta 0.1.08'
+  Caption = 'Alvatrum Beta 0.1.09'
   ClientHeight = 659
   ClientWidth = 1177
   DesignTimePPI = 120
@@ -23370,6 +23370,175 @@ object SpecEmu: TSpecEmu
         ParentFont = False
         ParentColor = False
         TabOrder = 20
+      end
+      object Button_flush_drives: TBGRAResizeSpeedButton
+        Left = 352
+        Height = 27
+        Hint = 'write to disk'
+        Top = 163
+        Width = 32
+        Color = clBlack
+        Glyph.Data = {
+          56130000424D5613000000000000360000002800000030000000220000000100
+          1800000000002013000064000000640000000000000000000000FEFEFEFEFEFE
+          FFFFFFF1F1F1EDEDEDECECECF7F7F7FFFFFFFEFEFEF9F9F9ECECECEDEDEDF0F0
+          F0FFFFFFFFFFFFFDFDFDEFEFEFEBEBEBEBEBEBF5F5F5F9F9F9F8F8F8EFEFEFE7
+          E7E7E7E7E7EFEFEFF8F8F8F9F9F9F5F5F5EBEBEBEBEBEBEFEFEFFDFDFDFFFFFF
+          FFFFFFF0F0F0EDEDEDECECECF9F9F9FEFEFEFFFFFFF7F7F7ECECECEDEDEDF1F1
+          F1FFFFFFFEFEFEFEFEFEF8F8F8F8F8F8F8F8F8F5F5F5F4F4F4F4F4F4F6F6F6FA
+          FAFAFBFBFBFCFCFCF2F2F2E2E2E2D6D6D6D3D3D3C8C8C8BCBCBCA8A8A89A9A9A
+          9494949191918989898484847D7D7D7777777777777D7D7D8484848989899090
+          909494949A9A9AA8A8A8BABABAC8C8C8D2D2D2D5D5D5E2E2E2F1F1F1FCFCFCFC
+          FCFCFAFAFAF6F6F6F4F4F4F4F4F4F5F5F5F8F8F8F8F8F8F8F8F8EDEDEDEDEDED
+          ECECECFBFBFBFFFFFFFFFFFFF8F8F8D1D1D1A9A9A97C7C7C5F5F5F5151514141
+          412B2B2B10101000000000000000000000000000000000000000000000000000
+          00000000000000000000000000000000000000000000000000000000000F0F0F
+          2A2A2A4040405050505E5E5E797979A6A6A6CECECEF7F7F7FFFFFFFFFFFFFBFB
+          FBECECECEDEDEDEDEDEDEDEDEDEDEDEDEDEDEDF7F7F7E7E7E7A5A5A51C1C1C00
+          00000000000000002323233737374343434646465050506262628484849C9C9C
+          ABABABB3B3B3B5B5B5B9B9B9C6C6C6CECECECECECEC6C6C6B9B9B9B5B5B5B3B3
+          B3ACACAC9C9C9C85858562626250505046464643434337373723232300000000
+          0000000000000000A0A0A0E5E5E5F7F7F7EDEDEDEDEDEDEDEDEDF1F1F1F3F3F3
+          CDCDCD8787870000000000000000006D6D6D999999B4B4B4C2C2C2C8C8C8CBCB
+          CBC1C1C1C1C1C1BFBFBFC1C1C1B6B6B6ACACAC9797978E8E8E8989898C8C8C8E
+          8E8E8E8E8E8C8C8C8989898D8D8D979797ABABABB5B5B5C0C0C0BFBFBFC0C0C0
+          C1C1C1CBCBCBC7C7C7C1C1C1B4B4B49999996D6D6D0000000000000000008282
+          82CBCBCBF3F3F3F1F1F1FEFEFED9D9D9414141000000565656B6B6B6E5E5E5D7
+          D7D7B2B2B28A8A8A6C6C6C5D5D5D4C4C4C343434171717000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          000000000000000000000000001515153333334B4B4B5C5C5C6B6B6B878787AF
+          AFAFD4D4D4E4E4E4B8B8B85D5D5D0000003E3E3ED9D9D9FEFEFEFFFFFFCCCCCC
+          616161C2C2C2D9D9D99797971919190000000000000000001919192B2B2B3636
+          364343434B4B4B747474868686949494A3A3A3B4B4B4BFBFBFC7C7C7C3C3C3BF
+          BFBFBFBFBFC3C3C3C7C7C7BFBFBFB4B4B4A4A4A49494948686867474744B4B4B
+          4343433636362B2B2B191919000000000000000000000000919191D7D7D7C8C8
+          C8676767CBCBCBFFFFFFFDFDFDFAFAFADBDBDB84848400000000000000000062
+          6262929292ACACACB8B8B8BDBDBDC3C3C3D6D6D6DADADAD2D2D2BBBBBBB0B0B0
+          A4A4A4A5A5A5A1A1A19999998E8E8E8787878787878E8E8E999999A0A0A0A5A5
+          A5A4A4A4B0B0B0BABABAD1D1D1DADADAD6D6D6C3C3C3BCBCBCB7B7B7ACACAC92
+          92926363630000000000000000007F7F7FDADADAFAFAFAFDFDFDF0F0F0CECECE
+          3A3A3A0000005E5E5EC1C1C1E1E1E1C7C7C7ADADAD9292927272726161615050
+          503D3D3D12121200000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000101010
+          3D3D3D4F4F4F616161717171909090ABABABC4C4C4E0E0E0C0C0C05F5F5F0000
+          00373737CECECEF0F0F0EEEEEEBFBFBF5A5A5AD4D4D4ECECECA8A8A82B2B2B00
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000181818A3A3A3E9E9E9D7D7D7616161BDBDBDEEEEEEECECECE9E9E9
+          D0D0D08D8D8D0000000000000000000101010000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000101010000000000000000008888
+          88CFCFCFE9E9E9ECECECFBFBFBD7D7D73F3F3F00000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000007E7E7EA9A9A9B5B5B5B7B7B7B7B7B7B5B5B5A9A9A97E7E7E0000
+          0000000000000000000000000000000000000000000000000000000000000000
+          00000000000000000000000000000000003D3D3DD6D6D6FBFBFBFFFFFFCCCCCC
+          2121210000000000000000000000000000000000000000000000000000000000
+          000000000202022222220000000000004D4D4DEDEDEDFFFFFFFFFFFFF5F5F5ED
+          EDEDEDEDEDF5F5F5FFFFFFFFFFFFF1F1F1535353000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          00202020CCCCCCFFFFFFFFFFFFFCFCFCB0B0B046464600000000000000000000
+          00000000000000000000000000000000000000008E8E8EC9C9C9676767000000
+          0808086F6F6FAEAEAEC1C1C1C9C9C9C5C5C5C5C5C5C9C9C9C2C2C2AEAEAE7171
+          7108080800000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000434343AEAEAEFCFCFCFFFFFFF6F6F6F6F6F6
+          F7F7F7E3E3E3BDBDBD6363630000000000000000000101010000000101010000
+          00919191A2A2A2474747B6B6B655555500000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000202020000000000000000005B5B5BBABABAE2E2
+          E2F6F6F6F6F6F6F6F6F6EDEDEDEDEDEDECECECFBFBFBFEFEFEFFFFFFE7E7E7B2
+          B2B27676760404040F0F0F000000707070AAAAAA1414140000002A2A2AD6D6D6
+          3F3F3F0000000000000000000000000000000000000000000000000000000000
+          000000000000000000000000000000000101010606060A0A0A0F0F0F00000071
+          7171AEAEAEE4E4E4FFFFFFFEFEFEFBFBFBECECECEDEDEDEDEDEDEDEDEDEDEDED
+          ECECECFBFBFBFFFFFFFFFFFFF5F5F5F0F0F0F3F3F3F4F4F4E9E9E9CFCFCFBFBF
+          BF000000000000000000000000131313C8C8C87575754B4B4B4141413F3F3F3F
+          3F3F3E3E3E3D3D3D3C3C3C4242425050506363636A6A6A767676787878848484
+          949494B7B7B7D0D0D0E8E8E8F3F3F3F3F3F3F0F0F0F6F6F6FFFFFFFFFFFFFBFB
+          FBECECECEDEDEDEDEDEDF2F2F2F2F2F2F2F2F2F9F9F9FAFAFAFAFAFAF5F5F5F2
+          F2F2F2F2F2F5F5F5FFFFFFB9B9B9000000000000000000000000010101000000
+          3E3E3EC1C1C1E0E0E0DCDCDCDEDEDEDFDFDFDFDFDFDDDDDDDBDBDBDDDDDDE1E1
+          E1E9E9E9EBEBEBF0F0F0EEEEEEF3F3F3F5F5F5FCFCFCFCFCFCFCFCFCF5F5F5F2
+          F2F2F2F2F2F5F5F5FAFAFAFAFAFAF9F9F9F2F2F2F2F2F2F2F2F2FEFEFEFEFEFE
+          FFFFFFF1F1F1EDEDEDEDEDEDF7F7F7FEFEFEFEFEFEF9F9F9B2B2B21818180000
+          000000000000000000000000000000000000002B2B2BE5E5E5FFFFFFF5F5F5ED
+          EDEDEDEDEDF5F5F5FEFEFEFEFEFEF9F9F9EEEEEEEDEDEDEFEFEFFDFDFDFEFEFE
+          FEFEFEEFEFEFEDEDEDECECECF9F9F9FEFEFEFEFEFEF7F7F7EDEDEDEDEDEDF1F1
+          F1FFFFFFFEFEFEFEFEFEFEFEFEFEFEFEFFFFFFF1F1F1EDEDEDECECECF7F7F7FF
+          FFFFFFFFFFC9C9C9000000000000000000000000000000000000000000000000
+          000000000000070707E0E0E0F7F7F7EDEDEDEDEDEDF4F4F4FEFEFEFEFEFEFAFA
+          FAEEEEEEEDEDEDEFEFEFFDFDFDFEFEFEFFFFFFEFEFEFEDEDEDECECECF9F9F9FE
+          FEFEFFFFFFF7F7F7ECECECEDEDEDF1F1F1FFFFFFFEFEFEFEFEFEFEFEFEFEFEFE
+          FEFEFEF1F1F1EEEEEEEDEDEDF7F7F7FFFFFFBBBBBB0000000000000000000000
+          00000000000000000000000000000000000000010101000000434343D0D0D0EF
+          EFEFEEEEEEF5F5F5FEFEFEFEFEFEFAFAFAEFEFEFEEEEEEF0F0F0FDFDFDFEFEFE
+          FEFEFEF0F0F0EEEEEEEDEDEDF9F9F9FEFEFEFEFEFEF7F7F7EDEDEDEEEEEEF1F1
+          F1FEFEFEFEFEFEFEFEFEEDEDEDEDEDEDEDEDEDFBFBFBFEFEFEFEFEFEF5F5F5B7
+          B7B7202020000000000000000000000000000000000000000000000000000000
+          000000000000000000000000353535E7E7E7FFFFFFF7F7F7EDEDEDEDEDEDF2F2
+          F2FDFDFDFEFEFEFCFCFCEFEFEFEDEDEDEDEDEDFCFCFCFEFEFEFEFEFEF3F3F3ED
+          EDEDEDEDEDF5F5F5FEFEFEFEFEFEFBFBFBEDEDEDEDEDEDEDEDEDEDEDEDEDEDED
+          ECECECFBFBFBFEFEFEFFFFFFDDDDDD5656565C5C5C6060606464646464645B5B
+          5B0000000000000000000000000000006363635F5F5F5D5D5D5D5D5D5E5E5E68
+          6868F3F3F3F8F8F8EDEDEDEDEDEDF2F2F2FDFDFDFEFEFEFCFCFCEEEEEEEDEDED
+          ECECECFCFCFCFEFEFEFFFFFFF3F3F3EDEDEDECECECF4F4F4FEFEFEFEFEFEFBFB
+          FBECECECEDEDEDEDEDEDECECECECECECEBEBEBFCFCFCFFFFFFFFFFFFEAEAEADD
+          DDDDDFDFDFE5E5E5F2F2F2F1F1F1DCDCDC000000000000000000000000000000
+          EEEEEEE5E5E5DFDFDFDFDFDFE9E9E9F0F0F0F6F6F6F8F8F8ECECECECECECF2F2
+          F2FEFEFEFFFFFFFDFDFDEDEDEDECECECEBEBEBFDFDFDFFFFFFFFFFFFF2F2F2EC
+          ECECEBEBEBF4F4F4FFFFFFFFFFFFFCFCFCEBEBEBECECECECECECFBFBFBFBFBFB
+          FCFCFCF3F3F3F1F1F1F0F0F0F7F7F7FCFCFCFBFBFBF9F9F9F0F0F0F1F1F1DCDC
+          DC000000000000000000000000000000EEEEEEF9F9F9FBFBFBFBFBFBF5F5F5F1
+          F1F1F1F1F1F6F6F6FBFBFBFBFBFBF9F9F9F1F1F1F1F1F1F2F2F2FBFBFBFBFBFB
+          FBFBFBF2F2F2F1F1F1F0F0F0F8F8F8FBFBFBFCFCFCF7F7F7F0F0F0F1F1F1F3F3
+          F3FCFCFCFBFBFBFBFBFBFEFEFEFEFEFEFFFFFFF1F1F1ECECECECECECF7F7F7FF
+          FFFFFEFEFEF9F9F9ECECECEDEDEDD9D9D9000000000000000000000000000000
+          EBEBEBFAFAFAFEFEFEFEFEFEF4F4F4EDEDEDEDEDEDF4F4F4FEFEFEFEFEFEFAFA
+          FAEEEEEEEDEDEDEFEFEFFDFDFDFEFEFEFFFFFFEFEFEFEDEDEDECECECF9F9F9FE
+          FEFEFFFFFFF7F7F7ECECECECECECF1F1F1FFFFFFFEFEFEFEFEFEFFFFFFFFFFFF
+          FFFFFFF0F0F0ECECECECECECF7F7F7FFFFFFFFFFFFF9F9F9EBEBEBEDEDEDD8D8
+          D8000000000000000000000000000000EBEBEBFAFAFAFFFFFFFFFFFFF4F4F4EC
+          ECECECECECF4F4F4FFFFFFFFFFFFFAFAFAEDEDEDECECECEFEFEFFDFDFDFFFFFF
+          FFFFFFEEEEEEECECECEBEBEBF9F9F9FFFFFFFFFFFFF7F7F7ECECECECECECF0F0
+          F0FFFFFFFFFFFFFFFFFFF6F6F6F6F6F6F6F6F6F7F7F7F6F6F6F6F6F6F6F6F6F6
+          F6F6F6F6F6F6F6F6F6F6F6F6F6F6E2E2E2000000000000000000000000000000
+          F3F3F3F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6
+          F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6F6
+          F6F6F6F6F6F6F6F6F6F6F6F6F6F6F7F7F7F6F6F6F6F6F6F6F6F6ECECECECECEC
+          ECECECFBFBFBFFFFFFFFFFFFF4F4F4ECECECECECECF3F3F3FFFFFFFFFFFFE9E9
+          E9000000000000000000000000000000FBFBFBF3F3F3ECECECEDEDEDF7F7F7FF
+          FFFFFFFFFFF7F7F7EDEDEDECECECF2F2F2FEFEFEFFFFFFFDFDFDEEEEEEECECEC
+          ECECECFDFDFDFEFEFEFFFFFFF3F3F3ECECECECECECF4F4F4FFFFFFFFFFFFFBFB
+          FBECECECECECECECECECEDEDEDEDEDEDECECECFBFBFBFFFFFFFFFFFFF4F4F4EC
+          ECECECECECF3F3F3FFFFFFFFFFFFE9E9E9000000000000000000000000000000
+          FBFBFBF3F3F3EDEDEDEDEDEDF7F7F7FEFEFEFEFEFEF7F7F7EDEDEDEDEDEDF2F2
+          F2FEFEFEFEFEFEFCFCFCEEEEEEEDEDEDECECECFCFCFCFEFEFEFFFFFFF3F3F3EC
+          ECECECECECF4F4F4FFFFFFFFFFFFFBFBFBECECECEDEDEDEDEDEDF1F1F1F1F1F1
+          F0F0F0F9F9F9FBFBFBFBFBFBF5F5F5F1F1F1F1F1F1F4F4F4FBFBFBFBFBFBE5E5
+          E5000000000000000000000000000000F8F8F8F5F5F5F1F1F1F1F1F1F7F7F7FB
+          FBFBFBFBFBF7F7F7F1F1F1F1F1F1F4F4F4FBFBFBFBFBFBFAFAFAF2F2F2F1F1F1
+          F1F1F1FAFAFAFBFBFBFBFBFBF4F4F4F1F1F1F1F1F1F5F5F5FBFBFBFBFBFBF9F9
+          F9F0F0F0F1F1F1F1F1F1FFFFFFFFFFFFFFFFFFF0F0F0ECECECECECECF7F7F7FF
+          FFFFFFFFFFF9F9F9EBEBEBEDEDEDD8D8D8000000000000000000000000000000
+          EBEBEBFAFAFAFFFFFFFFFFFFF4F4F4ECECECECECECF4F4F4FFFFFFFFFFFFFAFA
+          FAEDEDEDECECECEFEFEFFDFDFDFFFFFFFFFFFFEEEEEEECECECEBEBEBF9F9F9FF
+          FFFFFFFFFFF7F7F7ECECECECECECF0F0F0FFFFFFFFFFFFFFFFFFFEFEFEFEFEFE
+          FFFFFFF1F1F1EDEDEDEDEDEDF6F6F6FFFFFFFEFEFEF9F9F9ECECECEDEDEDDFDF
+          DF7878788181818080807878786E6E6EECECECFAFAFAFEFEFEFEFEFEF5F5F5ED
+          EDEDEDEDEDF5F5F5FEFEFEFEFEFEF9F9F9EEEEEEEDEDEDEFEFEFFDFDFDFEFEFE
+          FEFEFEEFEFEFEDEDEDECECECF9F9F9FEFEFEFFFFFFF6F6F6EDEDEDEDEDEDF1F1
+          F1FFFFFFFEFEFEFEFEFEFEFEFEFEFEFEFFFFFFF1F1F1EDEDEDECECECF7F7F7FE
+          FEFEFEFEFEF9F9F9ECECECEDEDEDEEEEEEF9F9F9F8F8F8F7F7F7E9E9E9E7E7E7
+          EEEEEEFAFAFAFEFEFEFEFEFEF5F5F5EDEDEDEDEDEDF5F5F5FEFEFEFEFEFEF9F9
+          F9EEEEEEEDEDEDEFEFEFFDFDFDFEFEFEFFFFFFEFEFEFEDEDEDECECECF9F9F9FE
+          FEFEFEFEFEF7F7F7ECECECEDEDEDF1F1F1FFFFFFFEFEFEFEFEFE
+        }
+        Transparent = False
+        OnClick = Button_flush_drivesClick
+        ShowHint = True
+        ParentShowHint = False
       end
     end
     object ButtonDeleteBlock: TBGRAResizeSpeedButton
